<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    
    <string name="input"></string>
    <string name="clear">Clear</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="back">BACK</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="signChange">+/-</string>
    <string name="reciprocal">1/x</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    
    <string name="inputTextView">Input</string>
    <string name="outputTextView">0</string>
    
    
    <string name="action_settings">Settings</string>
    

</resources>
